--- a/pages/allDraws/allDraws.wxss
+++ b/pages/allDraws/allDraws.wxss
@@ -4,62 +4,75 @@ page{
 }
 .content{
   background: #f5f5f5;
+  padding: 0 30rpx 30rpx 30rpx;
 }
-.contShop{
-  margin: 20rpx 30rpx;
+
+/* 列表 */
+.contColls{
+  padding: 0 30rpx 30rpx 30rpx;
+}
+.contColl{
+  position: relative;
+  margin-top: 30rpx;
   padding: 30rpx;
   background: #fff;
-  display: flex;
   border-radius: 20rpx;
+  display: flex;
 }
-.shopImg{
+.collSponsor{
+  position: absolute;
+  top: 0;
+  /* padding: 14rpx 50rpx; */
+  width: 300rpx;
+  height: 60rpx;
+  line-height: 60rpx;
+  font-size:28rpx;
+  font-family:PingFangSC-Medium;
+  font-weight:500;
+  color: #fff;
+}
+.collSponsor image{
+  width: 100%;
+  height: 100%;
+}
+.sponsorText{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  text-align: center;
+}
+
+
+
+.collImg{
   width: 210rpx;
   height: 210rpx;
+  border-radius: 10rpx;
 }
-.shopping{
-  margin-left: 16rpx;
-  width: 62%;
+.collRight{
+  margin-left: 40rpx;
+  width: 60%;
 }
-.shopName{
-  font-size:28rpx;
+.collName{
+  margin-top: 70rpx;
+  font-size:38rpx;
   font-family:PingFangSC-Medium;
   font-weight:500;
   color: #5D6977;
   display: block;
 }
-.shopTime{
-  margin-top: 16rpx;
-  font-size:22rpx;
-  font-family:PingFangSC-Regular;
+.collTime{
   color: #999;
   display: block;
-}
-.shopPorper{
-  display: flex;
-  justify-content: space-between;
-}
-.poperShop{
-  display:flex;
-  padding:10rpx 20rpx 10rpx 10rpx;
-  margin-top:8rpx;
-  background:#FDEEEF;
-  border-radius:6rpx;
-  height:30rpx;
-  line-height:30rpx;
-}
-.porperIcon{
-  width: 18rpx;
-  height: 26rpx;
-  display: block;
-}
-.porperText{
-  margin-left: 10rpx;
-  font-size:20rpx;
+  font-size:24rpx;
   font-family:PingFangSC-Regular;
-  color: #FF646A;
+  font-weight:400;
 }
+
+
+
 .shopNum{
-  margin-top: 30rpx;
+  margin-top: 50rpx;
   display: flex;
   justify-content: space-between;
   line-height: 30rpx;
