--- a/pages/information/information.wxss
+++ b/pages/information/information.wxss
@@ -5,6 +5,13 @@ page{
 .content{
   background: #f5f5f5;
 }
+.infor_Text{
+  margin: 20% 0;
+  font-size:30rpx;
+  font-family:MicrosoftYaHei;
+  color: #333;
+  text-align: center;
+}
 
 .inforCont{
   display: flex;
@@ -43,7 +50,23 @@ page{
   padding: 34rpx 30rpx;
   background: #fff;
 }
+.mation_img{
+  display: block;
+}
+.inforImg_main{
+  padding-top: 30rpx;
+  display: flex;
+  flex-wrap: wrap;
+}
 .inforImg{
-  width: 50rpx;
-  height: 50rpx;
+  margin-top: 10rpx;
+  margin-left: 18rpx;
+  width: 180rpx;
+  height: 180rpx;
+  
+  /* display: block; */
+}
+.inforImg image{
+  width: 100%;
+  height: 100%;
 }
