--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -10,41 +10,23 @@
           <open-data type='userAvatarUrl'></open-data>
           <open-data type='userNickName'></open-data>
         </view>
-        <view class='rule'>
-          <text class='headRule' bindtap='raiders'>规则</text>
-        </view>
       </view>
+
       <view class='account'>
-        <view class='accountMoney'>
-          <text class='accontText'>账户余额</text>
-          <view class='accont_money'>
-            <text class='moneyText'>{{wallet}}</text>
-            <image class='moneyImg' src='../../image/Group_6@2x.png'></image>
-          </view>
+        <view class='all_draw' bindtap='allDraw'>
+          <text class='drawTextColor'>{{draw_count}}</text>
+          <text class='drawText'>参与抽奖</text>
         </view>
-        <view class='accountIntegral'>
-          <text class='accontText'>现有积分</text>
-          <view class='accont_money'>
-            <text class='moneyText'>{{integral}}</text>
-            <image class='integralImg' src='../../image/Group_6_Copy@2x.png'></image>
-          </view>
+        <view class='all_draw' bindtap='pointRecord'>
+          <text class='drawTextColor'>{{integral_count}}</text>
+          <text class='drawText'>积分记录</text>
+        </view>
+        <view class='all_draw' bindtap='winningRecord'>
+          <text class='drawTextColor'>{{award_count}}</text>
+          <text class='drawText'>中奖记录</text>
         </view>
       </view>
-    </view>
-  </view>
-  <!-- 全部抽奖 -->
-  <view class='allDraws'>
-    <view class='all_draw' bindtap='allDraw'>
-      <image class='drawImg' src='../../image/my_qbcj@2x.png'></image>
-      <text class='drawText'>全部抽奖</text>
-    </view>
-    <view class='all_draw' bindtap='pointRecord'>
-      <image class='drawImg' src='../../image/my_jfjl@2x.png'></image>
-      <text class='drawText'>积分记录</text>
-    </view>
-    <view class='all_draw' bindtap='winningRecord'>
-      <image class='drawImg' src='../../image/my_zjjl@2x.png'></image>
-      <text class='drawText'>中奖记录</text>
+
     </view>
   </view>
   <!-- 收货地址/个人信息 -->
@@ -61,49 +43,3 @@
   </view>
 
 </view>
-
-<!-- <view class='top'>
-  <open-data type='userAvatarUrl'></open-data>
-  <open-data type='userNickName'></open-data>
-</view>
-
-<view class='record'>
-  <view class='record-l'>
-    <view>1</view>
-    <view>已预约</view>
-  </view>
-  <view class='record-r'>
-    <view>0</view>
-    <view>已中奖</view>
-  </view>
-</view>
-
-<view class='con'>
-  <navigator  url='../order/order'>
-    <view class='con-tit'>
-      <image src='../../image/me-icon-1.png'></image>
-      <text>订单信息</text>
-    </view>
-    <view>
-     <image class='con-arr' src='../../image/me-arrow.png'></image>
-    </view>   
-  </navigator>
-  <navigator  url='../question/question'>
-    <view class='con-tit'>
-      <image src='../../image/me-icon-3.png'></image>
-      <text>常见问题</text>     
-    </view>
-    <view>
-     <image class='con-arr' src='../../image/me-arrow.png'></image>
-    </view>   
-  </navigator>
-
-  <button id='contact' open-type="contact">
-    <view  class='contact-tit'>
-      <image src='../../image/me-icon-4.png'></image>
-      <text>联系客服</text>
-    </view>   
-    <image class='con-arr' src='../../image/me-arrow.png'></image>
-  </button>
-
-</view> -->
