--- a/pages/pointRecord/pointRecord.wxml
+++ b/pages/pointRecord/pointRecord.wxml
@@ -17,10 +17,46 @@
               <text class='pectongle'>+{{item.integral}}</text>
             </view>
           </block>
+          <block wx:if="{{item.source == 20}}">
+            <view class='pointTime'>
+              <text class='time'>{{item.create_time}}</text>
+              <text class='pointText'>抽奖获得{{item.integral}}积分</text>
+            </view>
+            <view class='pect'>
+              <text class='pectongle'>+{{item.integral}}</text>
+            </view>
+          </block>
           <block wx:if="{{item.source == 30}}">
             <view class='pointTime'>
               <text class='time'>{{item.create_time}}</text>
               <text class='pointText'>看一看，送积分</text>
+            </view>
+            <view class='pect'>
+              <text class='pectongle'>+{{item.integral}}</text>
+            </view>
+          </block>
+          <block wx:if="{{item.source == 50}}">
+            <view class='pointTime'>
+              <text class='time'>{{item.create_time}}</text>
+              <text class='pointText'>分享抽奖{{item.integral}}积分</text>
+            </view>
+            <view class='pect'>
+              <text class='pectongle'>+{{item.integral}}</text>
+            </view>
+          </block>
+           <block wx:if="{{item.source == 60}}">
+            <view class='pointTime'>
+              <text class='time'>{{item.create_time}}</text>
+              <text class='pointText'>分享小程序{{item.integral}}积分</text>
+            </view>
+            <view class='pect'>
+              <text class='pectongle'>+{{item.integral}}</text>
+            </view>
+          </block>
+           <block wx:if="{{item.source == 70}}">
+            <view class='pointTime'>
+              <text class='time'>{{item.create_time}}</text>
+              <text class='pointText'>关注公众号{{item.integral}}积分</text>
             </view>
             <view class='pect'>
               <text class='pectongle'>+{{item.integral}}</text>
