--- a/pages/welfareMall/welfareMall.wxss
+++ b/pages/welfareMall/welfareMall.wxss
@@ -1,279 +1,328 @@
 /* pages/welfareMall/welfareMall.wxss */
-page{
+
+page {
   background: #f5f5f5;
-}
-.content{
-  background: #f5f5f5;
-}
-.headImg{
-  width: 100%;
-  height: 250rpx;
-  display: block;
 }
 
-/* 兑换记录 */
-.headCont{
-  margin: 24rpx 18rpx 36rpx 18rpx;
-  display: flex;
-  justify-content: space-around;
-}
-.flexCont{
+/* 头部 */
+
+.header {
   position: relative;
 }
-.flexImg{
-  width: 234rpx;
-  height: 124rpx;
-  display: block;
-}
-.numText{
-  position: absolute;
-  top: 6%;
-  left: 0;
+
+.headBackImg {
   width: 100%;
+  height: 400rpx;
 }
-.numTexts{
+
+.headSign {
   position: absolute;
-  top: 14%;
-  left: 0;
-  width: 100%;
+  top: 20%;
+  right: 14%;
 }
-.contNum{
-  margin-top: 10rpx;
-  display: block;
+
+.signImg {
+  width: 212rpx;
+  height: 212rpx;
+}
+
+.signText {
+  position: absolute;
+  top: 26%;
+  left: 33%;
+  width: 60rpx;
+  height: 64rpx;
+}
+
+.singKy {
+  top: 26%;
+}
+
+.signJf {
+  font-size: 26rpx;
+  font-family: PingFangSC-Medium;
+  font-weight: 500;
+  color: #fff;
   text-align: center;
-  font-size:28rpx;
-  font-family:MicrosoftYaHei-Bold;
-  font-weight:bold;
-  color: #47DE96;
-}
-.contText{
-  margin-top: 6rpx;
   display: block;
-  text-align: center;
-  font-size:24rpx;
-  font-family:MicrosoftYaHei;
-  color: #5D6977;
 }
-.contIcon{
+
+.signNum {
+  display: block;
+  font-size: 50rpx;
+  font-family: PingFangSC-Medium;
+  font-weight: 500;
+  color: #fff;
+  text-align: center;
+}
+
+.singer {
+  position: absolute;
+  bottom: 6%;
+  left: 3%;
   display: flex;
+  width: 94%;
 }
-.headIcon{
-  margin-top: 10rpx;
-  margin-right: 10rpx;
-  margin-left: 32%;
+
+.singLx_text {
+  font-size: 20rpx;
+  font-family: PingFangSC-Medium;
+  font-weight: 500;
+  color: #fff;
+  text-align: center;
+}
+
+.singNum {
+  font-size: 32rpx;
+  font-family: PingFangSC-Medium;
+  font-weight: 500;
+  color: #fff;
   display: block;
-  width: 20rpx;
-  height: 20rpx;
-}
-.cont_Num{
-  font-size:28rpx;
-  font-family:MicrosoftYaHei-Bold;
-  font-weight:bold;
-  color: #F2C54E;
-}
-.conts_Num{
-  font-size:28rpx;
-  font-family:MicrosoftYaHei-Bold;
-  font-weight:bold;
-  color: #FF646A;
+  text-align: center;
 }
 
-/* 限时兑换 */
-.redemption{
-  margin: 0 30rpx;
-
+.singNum text {
+  font-size: 18rpx;
 }
-.redemp{
+
+.line {
+  margin: 16rpx 20rpx 0 20rpx;
+  width: 2rpx;
+  height: 80rpx;
+  background: #fff;
+}
+
+.signCont {
+  margin-top: 14rpx;
+  display: flex;
+  justify-content: space-around;
+  width: 77%;
+}
+
+.signContList {
+}
+
+.signTime {
+  font-size: 20rpx;
+  font-family: PingFangSC-Medium;
+  color: #fff;
+  display: block;
+  text-align: center;
+}
+
+.signView {
+  margin-top: 5rpx;
+  padding: 12rpx;
+  background: #f6403d;
+  border-radius: 50%;
+  font-size: 20rpx;
+  font-family: PingFangSC-Medium;
+  color: #fff;
+  display: block;
+  text-align: center;
+}
+
+.signIcon {
+  margin-top: 4rpx;
+  width: 50rpx;
+  height: 50rpx;
+}
+
+/* 主体 */
+
+.content {
+  padding: 36rpx 0;
+}
+
+/* 做任务赚积分 */
+
+.contEarnImg {
+  width: 290rpx;
+  height: 40rpx;
+}
+
+.earnCont {
+  margin: 20rpx 30rpx;
+  padding: 0 34rpx 42rpx 34rpx;
+  background: #fff;
+  border-radius: 20rpx;
+  overflow: hidden;
+}
+
+.contShare {
   display: flex;
   justify-content: space-between;
+  margin-top: 36rpx;
+}
+
+.contList {
+  display: flex;
+  justify-content: space-between;
+  width: 72%;
+  line-height: 60rpx;
+}
+
+.contText {
+  font-size: 32rpx;
+  font-family: MicrosoftYaHei-Bold;
+  font-weight: bold;
+  color: #606b79;
+}
+
+.contColor {
+  font-size: 32rpx;
+  font-family: MicrosoftYaHei;
+  color: #ff646a;
+}
+
+.contBtn {
+  margin: 0;
+  padding: 16rpx 28rpx;
+  background: linear-gradient(316deg, rgba(169, 130, 255, 1) 0%, rgba(226, 142, 254, 1) 100%);
+  border-radius: 30rpx;
+  font-size: 28rpx;
+  font-family: PingFangSC-Regular;
+  font-weight: 400;
+  color: #fff;
+  line-height: 32rpx;
+  outline: none;
+  border: 0;
+}
+
+.pointBtnC {
+  background: #fafbfc;
+  color: #b4b9be;
+}
+
+.textColor {
+  color: #ff646a;
+}
+
+/* 积分兑换 */
+
+.pointsImg {
+  width: 228rpx;
+  height: 40rpx;
+}
+
+.point_cont {
+  padding: 0 30rpx;
+}
+
+.point_list {
+  padding: 30rpx;
+  margin-bottom: 20rpx;
+  background: #fff;
+  border-radius: 20rpx;
+  display: flex;
+  justify-content: space-between;
+}
+
+.pointImg {
+  width: 100rpx;
+  height: 100rpx;
+}
+
+.pointPor {
+  width: 82%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.pointInfo {
+  width: 70%;
+}
+
+.pointName {
+  font-size: 30rpx;
+  font-family: PingFangSC-Medium;
+  font-weight: 500;
+  color: #5d6977;
+}
+
+.pointNum {
+  font-size: 24rpx;
+  font-family: PingFangSC-Regular;
+  font-weight: 400;
+  color: #999;
+  display: block;
+}
+
+.pointBtn {
+  margin-top: 14rpx;
   height: 40rpx;
   line-height: 40rpx;
 }
-.redempTime{
-  font-size:30rpx;
-  font-family:MicrosoftYaHei-Bold;
-  font-weight:bold;
-  color: #666;
-}
-.times{
-  margin-left: 10rpx;
-  font-size:22rpx;
-  font-family:PingFangSC-bold;
-  font-weight:bold;
-  color: #FF5365;
-}
-.redempText{
-  font-size:22rpx;
-  font-family:MicrosoftYaHei;
-  color: #666;
+
+.pointBtnColor {
+  margin-top: 14rpx;
+  height: 40rpx;
+  line-height: 40rpx;
+  background: #fafbfc;
+  color: #b4b9be;
 }
 
-.rempCont{
-  margin-top: 20rpx;
-  padding: 30rpx;
-  background: #fff;
-  display: flex;
-  border-radius: 20rpx;
-}
-.rempImg{
-  width: 210rpx;
-  height: 210rpx;
-}
-.rempRight{
-  margin-left: 18rpx;
-}
-.shopName{
-  margin-bottom: 20rpx;
-  font-size:28rpx;
-  font-family:PingFangSC-Medium;
-  font-weight:500;
-  color: #5D6977;
-  display: block;
-}
-.integral{
-  margin-top: 10rpx;
-  display: flex;
-}
-.integralIcon{
-  margin-top: 6rpx;
-  width: 20rpx;
-  height: 20rpx;
-}
-.integralText{
-  margin-left: 10rpx;
-  font-size:22rpx;
-  font-family:MicrosoftYaHei;
-  color: #999;
-}
-.integralNum{
-  margin-left: 10rpx;
-  font-size:22rpx;
-  font-family:MicrosoftYaHei-Bold;
-  font-weight:bold;
-  color: #FF646A;
-}
-.redeemNow{
-  margin-top: 36rpx;
-  padding: 6rpx 0;
-  width: 180rpx;
+.contPointText {
+  margin: 30rpx 0;
+  font-size: 36rpx;
+  font-family: MicrosoftYaHei-Bold;
+  font-weight: bold;
+  color: #606b79;
   text-align: center;
   display: block;
-  background:linear-gradient(327deg,rgba(147,104,242,1) 0%,rgba(255,158,244,1) 100%);
-  border-radius:10rpx;
-  font-size:28rpx;
-  font-family:PingFangSC-Regular;
-  font-weight:400;
-  color: #fff;
 }
 
-/* 大家都在换 */
-.prizeRedemption{
-  margin-top: 50rpx;
-}
-.prizeText{
-  margin-left: 30rpx;
-  font-size:30rpx;
-  font-family:MicrosoftYaHei-Bold;
-  font-weight:bold;
-  color: #666;
-  display: block;
-}
-.redemption_content{
-  margin: 30rpx;
-}
+/* 关注公众号 */
 
-.prizeCont{
-  margin-left: 14rpx;
-  /* margin: 20rpx 0 0 30rpx; */
-  padding: 24rpx;
-  background: #fff;
-  border-radius: 20rpx;
-  width: 280rpx;
-  float: left;
-}
-.prizeImg{
-  width: 280rpx;
-  height: 280rpx;
-}
-.prize_text{
-  width: 280rpx;
-  margin-top: 20rpx;
-  font-size:28rpx;
-  font-family:PingFangSC-Medium;
-  font-weight:500;
-  color: #5D6977;
-  display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.redamption_prize{
-  margin-top: 12rpx;
-  display: flex;
-}
-.redamotion_remp{
-  display: flex;
-}
-.redamotion_remps{
-  display: flex;
-  margin-left: 20rpx;
-}
-
-/* 获取现金红包 */
-.gettingCashMask{
+.mask {
   position: fixed;
   top: 0;
+  bottom: 0;
   left: 0;
   right: 0;
-  bottom: 0;
   z-index: 10;
   background: rgba(0, 0, 0, 0.5);
+  /* display: none; */
 }
-.gettingCash{
+
+.pointMask {
   position: fixed;
-  top: 28%;
-  left: 7%;
-  padding: 110rpx 74rpx 82rpx 74rpx;
+  top: 6%;
+  left: 4%;
+  padding: 40rpx;
+  width: 600rpx;
+  z-index: 12;
   background: #fff;
-  z-index: 20;
   border-radius: 20rpx;
+  /* display: none; */
 }
-.getting{
-  font-size:38rpx;
-  font-family:MicrosoftYaHei-Bold;
-  font-weight:bold;
-  color: #EE6665;
-  display: block;
-  text-align: center;
+
+.maskImg {
+  width: 100%;
+  height: 800rpx;
 }
-.gettingText{
-  font-size:28rpx;
-  font-family:MicrosoftYaHei;
-  color: #4a4a4a;
-  display: block;
-  text-align: center;
-}
-.gettingBut{
-  margin-top: 60rpx;
-  background: #EE6665;
-  border-radius: 10rpx;
-  width: 500rpx;
-  height: 80rpx;
-  font-size:32rpx;
-  font-family:MicrosoftYaHei;
+
+.maskBth {
+  margin-top: 30rpx;
+  background: #ff646a;
+  border-radius: 20rpx;
+  height: 100rpx;
+  width: 100%;
+  line-height: 100rpx;
+  font-size: 28rpx;
+  font-family: MicrosoftYaHei;
   color: #fff;
   text-align: center;
-  line-height: 80rpx;
+  border: 0;
+  outline: none;
 }
-.gettingButs{
-  margin-top: 60rpx;
-  background: #A384F4;
-  border-radius: 10rpx;
-  width: 500rpx;
-  height: 80rpx;
-  font-size:32rpx;
-  font-family:MicrosoftYaHei;
-  color: #fff;
+
+.maskText {
+  margin-top: 10rpx;
+  display: block;
+  font-size: 24rpx;
+  font-family: PingFangSC-Regular;
+  font-weight: 400;
+  color: #333;
   text-align: center;
-  line-height: 80rpx;
 }
