--- a/pages/winningRecord/winningRecord.wxss
+++ b/pages/winningRecord/winningRecord.wxss
@@ -8,171 +8,77 @@ page{
 .contents{
   margin: 0 30rpx;
 }
-.winning{
-  padding: 30rpx;
-  margin-top: 20rpx;
-  background: #fff;
-  display: flex;
-  border-radius: 20rpx;
+
+/* 列表 */
+.contColls{
+  padding: 0 30rpx 30rpx 30rpx;
 }
-.winningIcon{
+.contColl{
+  position: relative;
+  margin-top: 30rpx;
+  padding: 30rpx;
+  background: #fff;
+  border-radius: 20rpx;
+  display: flex;
+}
+.collSponsor{
+  position: absolute;
+  top: 0;
+  /* padding: 14rpx 50rpx; */
+  width: 300rpx;
+  height: 60rpx;
+  line-height: 60rpx;
+  font-size:28rpx;
+  font-family:PingFangSC-Medium;
+  font-weight:500;
+  color: #fff;
+}
+.collSponsor image{
+  width: 100%;
+  height: 100%;
+}
+.sponsorText{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  text-align: center;
+}
+
+
+
+.collImg{
   width: 210rpx;
   height: 210rpx;
+  border-radius: 10rpx;
 }
-.winningShop{
-  margin-left: 16rpx;
-  width: 64%;
+.collRight{
+  margin-left: 40rpx;
+  width: 60%;
 }
-.winningName{
-  font-size:28rpx;
+.collName{
+  margin-top: 70rpx;
+  font-size:38rpx;
   font-family:PingFangSC-Medium;
   font-weight:500;
   color: #5D6977;
   display: block;
 }
-.winningTime{
-  margin-top: 16rpx;
-  display: block;
-  font-size:22rpx;
-  font-family:PingFangSC-Regular;
+.collTime{
   color: #999;
+  display: block;
+  font-size:24rpx;
+  font-family:PingFangSC-Regular;
+  font-weight:400;
 }
-.winner{
-  margin-top: 78rpx;
+.shopNum{
+  margin-top: 50rpx;
   display: flex;
   justify-content: space-between;
-  line-height: 26rpx;
-}
-.winNum{
-  font-size:40rpx;
-  font-family:PingFangSC-Regular;
-  color: #FF646A;
-}
-.number{
-  font-size:30rpx;
 }
 .delivery{
   font-size:28rpx;
   font-family:PingFangSC-Regular;
-  color: #666;
+  color: #333;
 }
 
-.winNums{
-  font-family:PingFangSC-Regular;
-  color: #FF646A;
-  font-size:30rpx;
-  line-height: 58rpx;
-}
-.pending{
-  padding: 16rpx 30rpx;
-  background:linear-gradient(315deg,rgba(255,91,98,1) 0%,rgba(255,161,68,1) 100%);
-  border-radius:30rpx;
-  font-size:28rpx;
-  font-family:PingFangSC-Regular;
-  color: #fff;
-}
-.received{
-  padding: 16rpx 30rpx;
-  border-radius:30rpx;
-  border:1px solid #FF1946;
-  font-size:28rpx;
-  font-family:PingFangSC-Regular;
-  color: #FF1946;
-}
 
-/* 领红包弹窗 */
-.winningMask{
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 10;
-}
-.winnerMask{
-  position: fixed;
-  top: 13%;
-  left: 7%;
-  z-index: 20;
-}
-.enveImg{
-  width: 650rpx;
-  height: 740rpx;
-}
-.envel{
-  position: absolute;
-  top: 36%;
-  left: 6%;
-}
-/* 收下红包 */
-.envel_evs{
-  width: 580rpx;
-}
-.envel_icon{
-  margin: auto;
-  margin-top: 22rpx;
-  width: 114rpx;
-  height: 114rpx;
-  display: block;
-}
-.envel_text{
-  margin-top: 30rpx;
-  font-size:70rpx;
-  font-family:MicrosoftYaHei-Bold;
-  font-weight:bold;
-  color: #FEE9AB;
-  display: block;
-  text-align: center;
-}
-.envel_hong{
-  margin: auto;
-  margin-top: 50rpx;
-  background:linear-gradient(153deg,rgba(255,253,229,1) 0%,rgba(224,204,160,1) 100%);
-  border-radius:30rpx;
-  font-size:40rpx;
-  font-family:PingFangSC-Regular;
-  font-weight:400;
-  color: #985510;
-  width: 500rpx;
-  height: 100rpx;
-  text-align: center;
-  line-height: 100rpx;
-}
-/* 红包图片 */
-.eveet{
-  font-size:36rpx;
-  font-family:MicrosoftYaHei-Bold;
-  font-weight:bold;
-  color: #FEE9AB;
-  display: block;
-  text-align: center;
-}
-.envel_img{
-  margin-top: 34rpx;
-  position: relative;
-}
-.lopeimg{
-  display: block;
-  width: 580rpx;
-  height: 290rpx;
-}
-.lopeshopImg{
-  position: absolute;
-  left: 26rpx;
-  top: 20rpx;
-  width: 530rpx;
-  height: 250rpx;
-}
-.lopeshopImg image{
-  width: 100%;
-  height: 100%;
-}
-.exitMask{
-  position:absolute;
-  top:110%;
-  left:45%;
-  width:72rpx;
-  height:72rpx;
-  display:block;
-}
